# FastAPI-starter

./: README.md  docker-compose.yml  env.example  pyproject.toml
app/: config.py  database.py  main.py
app/models/: __init__.py  users.py
app/routers/: __init__.py  health.py
migrations/: env.py
