[project]
name = "fastapi-starter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.137.2",
    "sqlalchemy>=2.0.51",
]

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]

[tool.fastapi]
entrypoint = "app.main:app"